src/styles/Header.scss
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');

.Header {
	display: flex;
	align-items: center;
	flex-direction: column;

	width: 100%;
	height: 150px;

	background-color: #f3f3f3;
}

a,
a:visited,
a:hover,
a:active {
	text-decoration: none;
	color: inherit;
}

li {
    list-style-type: none;
}

.title {
	margin-top: 30px;
	margin-bottom: 30px;

	font-family: 'Press Start 2P', cursive;
	font-size: 35px;

	color: black;
}

.category {
    cursor: pointer;
}

nav {
	display: flex;
	justify-content: space-between;
	align-items: center;

	height: 100%;
	width: 100%;

	font-size: 20px;
	color: white;
	background-color: black;
}

.categories {
	display: flex;
	justify-content: center;
	align-items: center;
    gap: 50px;
}

.basket-container, .basket-counterpart {
	width: 30px;
}


.basket-counterpart {
	margin-left: 30px;
}

.basket-container {
	position: relative;
	margin-right: 30px;
	text-align: end;
}

#basket-count {
	position: absolute;
	bottom: -9px;
	right: -20px;

	width: 20px;

	text-align: left;
	font-size: 13px;
	font-weight: 500;
}

